[MS-788] restructured to prevent Y-margin collapse

--- a/src/sass/emotion.scss
+++ b/src/sass/emotion.scss
@@ -204,4 +204,10 @@
   .row {
     margin-bottom: 0;
   }
+  .content-wrapper { // prevents vertical margins collapse
+    &::after {
+      content: "";
+      display: table;
+    }
+  }
 }
